<resources>
    <string name="app_name">Student Notified</string>
    <string name="registration">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact">Contact</string>
    <string name="roll_no">Roll No</string>
    <string name="department">Department</string>
    <string name="applogo">applogo</string>
    <string name="go_back">Go Back</string>
    <string name="user_email">User Email</string>
    <string name="user_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="goto_registered">Registered?</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="appbar_text">Dashboard</string>
    <string name="dash_exit">dash exit</string>
    <string name="event_dash">event dash</string>
    <string name="project_dash_image">project dash image</string>
    <string name="research_dash_image">research dash image</string>
    <string name="schedule_dash_image">schedule dash image</string>
    <string name="publication_dash_image">publication dash image</string>
    <string name="back_pressed">back pressed</string>
    <string name="upload_events">Upload events</string>
    <string name="choose_image">Choose Image</string>
    <string name="show_image">Show Image</string>
    <string name="events_discription">Events Discription</string>
    <string name="upload_projects">Upload Projects</string>
    <string name="projects_discription">Projects Discription</string>
    <string name="upload_projects_btn">Upload Projects</string>
    <string name="upload_publication">Upload Publication</string>
    <string name="publication_discription">Publication Discription</string>
    <string name="upload_publication_btn">Upload Publication</string>
    <string name="upload_research">Upload Research</string>
    <string name="research_discription">Research Discription</string>
    <string name="upload_research_btn">Upload Research</string>
    <string name="upload_schedule">Upload Schedule</string>
    <string name="choose_image_Schedule">Choose Image</string>
    <string name="schedule_discription">Schedule Discription</string>
    <string name="upload_schedule_btn">Upload schedule</string>
    <string name="registration_text_view">Registration</string>
    <string name="upload_event">Upload Event</string>
    <string name="events">Events</string>
    <string name="notifications">Notifications</string>
    <string name="projects">projects</string>
    <string name="schedule">Schedule</string>
    <string name="event_show_img">event show img</string>
    <string name="event_img_likes">event img likes</string>
    <string name="like_button">like_button</string>
    <string name="event_discription_show">Event Discription</string>
    <string name="likes">likes</string>
</resources>
