<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:scrollbars="horizontal">

    <ImageView
        android:id="@+id/log_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_arrow_back_24px"
        android:contentDescription="@string/go_back"/>

    <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar"
            android:id="@+id/progress_circular"
            android:layout_below="@+id/log_back"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_circular"
            android:layout_centerHorizontal="true"
            android:id="@+id/log_image"
            android:src="@drawable/logo1"
            android:contentDescription="@string/applogo"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_input1"
            android:layout_below="@id/log_image"
            android:layout_margin="10dp"
            app:startIconDrawable="@drawable/user_30px"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/log_user"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_input2"
            android:layout_below="@id/log_input1"
            android:layout_margin="10dp"
            app:startIconDrawable="@drawable/password_24px"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/log_pass"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/user_password"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/log_input2"
            android:layout_margin="10dp"
            android:text="@string/login_btn"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            app:icon="@drawable/login"
            android:id="@+id/log_btn"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_registered"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_below="@+id/log_btn"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:id="@+id/go_to_Reg"/>
</RelativeLayout>