<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadResearch">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar_reseacrh"
        style="@style/Widget.MaterialComponents.TabLayout.Colored">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24px"
            android:layout_margin="5dp"
            android:id="@+id/research_back"
            android:contentDescription="@string/back_pressed"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_research"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal"
        android:layout_below="@+id/appbar_reseacrh">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pick_img_research"
                android:text="@string/choose_image"
                android:layout_margin="20dp"
                app:icon="@drawable/ic_photo_black_24dp"
                android:textSize="20sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@+id/pick_img_research"
                android:id="@+id/set_img_research"
                android:scaleType="centerInside"
                android:layout_margin="20dp"
                android:contentDescription="@string/show_image"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="20dp"
                android:layout_below="@+id/set_img_research"
                android:id="@+id/research_input"
                app:boxStrokeColor="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/research_discription"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="normal"
                    android:id="@+id/research_disc"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar"
                android:id="@+id/research_progress_circular"
                android:layout_below="@+id/research_input"
                android:visibility="invisible" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/upload_research"
                android:text="@string/upload_research_btn"
                android:layout_below="@+id/research_progress_circular"
                android:textSize="20sp"
                android:layout_margin="20dp"
                app:cornerRadius="10dp"/>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>