<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardMain">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_dash">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_24px"
                android:layout_margin="10dp"
                android:id="@+id/dash_back"
                android:contentDescription="@string/dash_exit"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite"
                android:text="@string/appbar_text"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/dash_event_img"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:src="@drawable/eventsupload"
                    android:contentDescription="@string/event_dash"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:src="@drawable/publication_dash"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/dash_publication_img"
                    android:contentDescription="@string/publication_dash_image"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:src="@drawable/schedules_dash"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/dash_schedule_img"
                    android:contentDescription="@string/schedule_dash_image"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/dash_research_img"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:src="@drawable/research_dash"
                    android:contentDescription="@string/research_dash_image"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:src="@drawable/projects_dash"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/dash_project_img"
                    android:contentDescription="@string/project_dash_image"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>